--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.interaction.toolkit": "1.0.0-pre.6",
     "com.unity.xr.management": "4.1.0",
     "com.unity.xr.oculus": "1.10.0",
     "com.unity.xr.openxr": "1.2.8",
