--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@
 
 # Visual Studio cache directory
 .vs/
+.vsconfig
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
 
 # Gradle cache directory
 .gradle/
